// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admin Stats setArea APPS should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body />,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Admin Stats should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          Stats
        </h1>
        <h6
          class="title is-6"
          id=""
        >
          Please select an area:
        </h6>
        <div
          class="is-centered buttons has-addons"
        >
          <button
            class="button   is-primary ml-0"
            data-test="area-apps-btn"
            type="button"
          >
            Apps
          </button>
          <button
            class="button   is-secondary "
            data-test="area-developers-btn"
            type="button"
          >
            Developers
          </button>
          <button
            class="button   is-secondary "
            data-test="area-installations-btn"
            type="button"
          >
            Installations
          </button>
        </div>
        <h6
          class="title is-6"
          id=""
        >
          Please select a time range:
        </h6>
        <div
          class="is-centered buttons has-addons"
        >
          <button
            class="button   is-primary ml-0"
            data-test="range-week-btn"
            type="button"
          >
            Last week
          </button>
          <button
            class="button   is-secondary "
            data-test="range-month-btn"
            type="button"
          >
            Last Month
          </button>
          <button
            class="button   is-secondary "
            data-test="range-all-btn"
            type="button"
          >
            All time
          </button>
        </div>
        <h6
          class="title is-6"
          id=""
        >
          Showing results for ‘
          APPS
          ’ and ‘
          Last Week
          ’
        </h6>
        <h5
          class="title is-5"
          id=""
        >
          Download as CSV
        </h5>
        <section
          class="section has-background"
          data-test=""
        >
          <button
            class="button   is-primary "
            data-test=""
            type="button"
          >
            Download
          </button>
        </section>
      </section>
    </div>
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          Stats
        </h1>
        <h6
          class="title is-6"
          id=""
        >
          Please select an area:
        </h6>
        <div
          class="is-centered buttons has-addons"
        >
          <button
            class="button   is-primary ml-0"
            data-test="area-apps-btn"
            type="button"
          >
            Apps
          </button>
          <button
            class="button   is-secondary "
            data-test="area-developers-btn"
            type="button"
          >
            Developers
          </button>
          <button
            class="button   is-secondary "
            data-test="area-installations-btn"
            type="button"
          >
            Installations
          </button>
        </div>
        <h6
          class="title is-6"
          id=""
        >
          Please select a time range:
        </h6>
        <div
          class="is-centered buttons has-addons"
        >
          <button
            class="button   is-primary ml-0"
            data-test="range-week-btn"
            type="button"
          >
            Last week
          </button>
          <button
            class="button   is-secondary "
            data-test="range-month-btn"
            type="button"
          >
            Last Month
          </button>
          <button
            class="button   is-secondary "
            data-test="range-all-btn"
            type="button"
          >
            All time
          </button>
        </div>
        <h6
          class="title is-6"
          id=""
        >
          Showing results for ‘
          APPS
          ’ and ‘
          Last Week
          ’
        </h6>
        <h5
          class="title is-5"
          id=""
        >
          Download as CSV
        </h5>
        <section
          class="section has-background"
          data-test=""
        >
          <button
            class="button   is-primary "
            data-test=""
            type="button"
          >
            Download
          </button>
        </section>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <h1
        class="el-title"
      >
        Stats
      </h1>
      <h6
        class="title is-6"
        id=""
      >
        Please select an area:
      </h6>
      <div
        class="is-centered buttons has-addons"
      >
        <button
          class="button   is-primary ml-0"
          data-test="area-apps-btn"
          type="button"
        >
          Apps
        </button>
        <button
          class="button   is-secondary "
          data-test="area-developers-btn"
          type="button"
        >
          Developers
        </button>
        <button
          class="button   is-secondary "
          data-test="area-installations-btn"
          type="button"
        >
          Installations
        </button>
      </div>
      <h6
        class="title is-6"
        id=""
      >
        Please select a time range:
      </h6>
      <div
        class="is-centered buttons has-addons"
      >
        <button
          class="button   is-primary ml-0"
          data-test="range-week-btn"
          type="button"
        >
          Last week
        </button>
        <button
          class="button   is-secondary "
          data-test="range-month-btn"
          type="button"
        >
          Last Month
        </button>
        <button
          class="button   is-secondary "
          data-test="range-all-btn"
          type="button"
        >
          All time
        </button>
      </div>
      <h6
        class="title is-6"
        id=""
      >
        Showing results for ‘
        APPS
        ’ and ‘
        Last Week
        ’
      </h6>
      <h5
        class="title is-5"
        id=""
      >
        Download as CSV
      </h5>
      <section
        class="section has-background"
        data-test=""
      >
        <button
          class="button   is-primary "
          data-test=""
          type="button"
        >
          Download
        </button>
      </section>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Admin Stats should show loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          Stats
        </h1>
        <h6
          class="title is-6"
          id=""
        >
          Please select an area:
        </h6>
        <div
          class="is-centered buttons has-addons"
        >
          <button
            class="button   is-primary ml-0"
            data-test="area-apps-btn"
            type="button"
          >
            Apps
          </button>
          <button
            class="button   is-secondary "
            data-test="area-developers-btn"
            type="button"
          >
            Developers
          </button>
          <button
            class="button   is-secondary "
            data-test="area-installations-btn"
            type="button"
          >
            Installations
          </button>
        </div>
        <h6
          class="title is-6"
          id=""
        >
          Please select a time range:
        </h6>
        <div
          class="is-centered buttons has-addons"
        >
          <button
            class="button   is-primary ml-0"
            data-test="range-week-btn"
            type="button"
          >
            Last week
          </button>
          <button
            class="button   is-secondary "
            data-test="range-month-btn"
            type="button"
          >
            Last Month
          </button>
          <button
            class="button   is-secondary "
            data-test="range-all-btn"
            type="button"
          >
            All time
          </button>
        </div>
        <h6
          class="title is-6"
          id=""
        >
          Showing results for ‘
          APPS
          ’ and ‘
          Last Week
          ’
        </h6>
        <h5
          class="title is-5"
          id=""
        >
          Download as CSV
        </h5>
        <section
          class="section has-background"
          data-test=""
        >
          <button
            class="button   is-primary "
            data-test=""
            type="button"
          >
            Download
          </button>
        </section>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <h1
        class="el-title"
      >
        Stats
      </h1>
      <h6
        class="title is-6"
        id=""
      >
        Please select an area:
      </h6>
      <div
        class="is-centered buttons has-addons"
      >
        <button
          class="button   is-primary ml-0"
          data-test="area-apps-btn"
          type="button"
        >
          Apps
        </button>
        <button
          class="button   is-secondary "
          data-test="area-developers-btn"
          type="button"
        >
          Developers
        </button>
        <button
          class="button   is-secondary "
          data-test="area-installations-btn"
          type="button"
        >
          Installations
        </button>
      </div>
      <h6
        class="title is-6"
        id=""
      >
        Please select a time range:
      </h6>
      <div
        class="is-centered buttons has-addons"
      >
        <button
          class="button   is-primary ml-0"
          data-test="range-week-btn"
          type="button"
        >
          Last week
        </button>
        <button
          class="button   is-secondary "
          data-test="range-month-btn"
          type="button"
        >
          Last Month
        </button>
        <button
          class="button   is-secondary "
          data-test="range-all-btn"
          type="button"
        >
          All time
        </button>
      </div>
      <h6
        class="title is-6"
        id=""
      >
        Showing results for ‘
        APPS
        ’ and ‘
        Last Week
        ’
      </h6>
      <h5
        class="title is-5"
        id=""
      >
        Download as CSV
      </h5>
      <section
        class="section has-background"
        data-test=""
      >
        <button
          class="button   is-primary "
          data-test=""
          type="button"
        >
          Download
        </button>
      </section>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
